# cod-with-friends

./: README.md  db.sqlite3  pyproject.toml
accounts/: forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py  0002_auto_20211022_2040.py
client/: package-lock.json
client/src/: App.js
config/: settings.py  urls.py
loadouts/: models.py
loadouts/migrations/: 0001_initial.py
server/: db.sqlite3  pyproject.toml
server/accounts/: forms.py  models.py  serializers.py  views.py
server/api/: views.py
server/config/: settings.py  urls.py
server/cwf_api/: apps.py  urls.py  views.py
server/loadouts/: serializers.py  views.py
server/soldier/: models.py  serializers.py  views.py
server/templates/: generic_form.html  index.html  leaderboards.html
server/weapons/: models.py  serializers.py  views.py
soldier/migrations/: 0001_initial.py
templates/: base.html  root.html
weapons/migrations/: 0001_initial.py
